force-app/main/default/objects/cpm__Audit_Trail__c/cpm__Audit_Trail__c.object-meta.xml
<CustomObject>
    <description>An object containing action done that are somehow related to PaymentHub and all it&apos;s extension packages.</description>
    <label>Audit Trail</label>
    <nameField>
        <displayFormat>CPMAU-{000000}</displayFormat>
        <label>Audit Trail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Trails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>