force-app/main/default/objects/cpm__Audit_Trail__c/fields/cpm__Package__c.field-meta.xml
<CustomField>
    <fullName>cpm__Package__c</fullName>
    <description>The Name of the packages that has cuased the record to be logged.</description>
    <inlineHelpText>El nombre del paquete de extensión que causo este log.</inlineHelpText>
    <label>Package</label>
    <length>255</length>
    <type>Text</type>
</CustomField>